errors.txt
   Compiling repomd-core v1.6.2 (C:\Users\X1 CARBON\Downloads\repomd\core)
warning: unused import: `Path`
 --> core\src\discover.rs:1:17
  |
1 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0004]: non-exhaustive patterns: `&FileRole::Schema` not covered
  --> core\src\assemble.rs:58:15
   |
58 |         match role {
   |               ^^^^ pattern `&FileRole::Schema` not covered
   |
note: `FileRole` defined here
  --> core\src\discover.rs:6:10
   |
 6 | pub enum FileRole {
   |          ^^^^^^^^
...
10 |     Schema,
   |     ------ not covered
   = note: the matched value is of type `&FileRole`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
66 ~             FileRole::Generated => 0,
67 ~             &FileRole::Schema => todo!(),
   |

error[E0382]: use of moved value: `e`
   --> core\src\assemble.rs:127:70
    |
127 |         included_files = final_files.into_iter().map(|(e, t)| (e, t, e.compression_level)).collect();
    |                                                        -       -     ^^^^^^^^^^^^^^^^^^^ value used here after move
    |                                                        |       |
    |                                                        |       value moved here
    |                                                        move occurs because `e` has type `ScoredFile`, which does not implement the `Copy` trait
    |
help: consider cloning the value if the performance cost is acceptable
    |
127 |         included_files = final_files.into_iter().map(|(e, t)| (e.clone(), t, e.compression_level)).collect();
    |                                                                 ++++++++

warning: variable does not need to be mutable
  --> core\src\assemble.rs:27:9
   |
27 |     for mut entry in entries {
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0382]: borrow of moved value: `dropped.0`
  --> core\src\assemble.rs:78:87
   |
78 |                 dropped_files.push((dropped.0, format!("Budget exhausted, CPS {:.2}", dropped.0.cps)));
   |                                     --------- value moved here                        ^^^^^^^^^^^^^ value borrowed here after move
   |
   = note: move occurs because `dropped.0` has type `ScoredFile`, which does not implement the `Copy` trait
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0004, E0382.
For more information about an error, try `rustc --explain E0004`.
warning: `repomd-core` (lib) generated 2 warnings
error: could not compile `repomd-core` (lib) due to 3 previous errors; 2 warnings emitted
